profilelist1exp/unpackaged/objects/Partner_Certification__c.object
<CustomObject>
    <description>Contains information about contacts who have completed NetExam Certifications</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account of Contact who achieved the Competency</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Competencies</relationshipLabel>
        <relationshipName>Partner_Certification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Certification</description>
        <label>Competency</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Partner Competencies</relationshipLabel>
        <relationshipName>Partner_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date Competency was completed</description>
        <label>Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who obtained the Competency</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Competencies</relationshipLabel>
        <relationshipName>Partner_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Competency</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Partner Competency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Competencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>